catkin_ws/logs/iq_gnc/build.make.628.log.stderr
/home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp: In function ‘void drone1_gpsVelSub_cb(const ConstPtr&)’:
/home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp:318:45: error: cannot convert ‘geometry_msgs::TwistStamped’ {aka ‘geometry_msgs::TwistStamped_<std::allocator<void> >’} to ‘geometry_msgs::TwistStamped*’ {aka ‘geometry_msgs::TwistStamped_<std::allocator<void> >*’}
  318 |   Fext_arr[sampleCount] = Fext(posError_wp, velError_tw);
      |                                             ^~~~~~~~~~~
      |                                             |
      |                                             geometry_msgs::TwistStamped {aka geometry_msgs::TwistStamped_<std::allocator<void> >}
In file included from /home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp:3:
/home/mario/catkin_ws/src/iq_gnc/include/gnc_functions.hpp:636:101: note:   initializing argument 2 of ‘geometry_msgs::Vector3Stamped Fext(geometry_msgs::PoseStamped, geometry_msgs::TwistStamped*, float, int)’
  636 | geometry_msgs::Vector3Stamped Fext (geometry_msgs::PoseStamped deltaX , geometry_msgs::TwistStamped deltaX_dot[], float deltaT, int k){
      |                                                                         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~
make[2]: *** [CMakeFiles/follower_sub.dir/build.make:63: CMakeFiles/follower_sub.dir/src/follower_sub.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:1804: CMakeFiles/follower_sub.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
